// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers actions bulkDeleteCustomer() 1`] = `
Object {
  "delete": Array [
    Object {
      "data": "{\\"ids\\":[1,2,3,4,5]}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": undefined,
      },
      "maxContentLength": -1,
      "method": "delete",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/customers/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`customers actions bulkDeleteCustomer() 2`] = `
Array [
  Object {
    "type": "BULK_DELETE_START",
  },
  Object {
    "ids": Immutable.List [
      1,
      2,
      3,
      4,
      5,
    ],
    "type": "BULK_DELETE_SUCCESS",
    "viewType": "customer-list",
  },
]
`;

exports[`customers actions create customer 1`] = `
Array [
  Object {
    "type": "SUBMIT_CUSTOMER_START",
  },
  Object {
    "isUpdate": false,
    "resp": Object {
      "data": Object {
        "email": "steve@acme.gorgias.io",
        "name": "Steve",
      },
    },
    "type": "SUBMIT_CUSTOMER_SUCCESS",
  },
]
`;

exports[`customers actions delete customer 1`] = `
Array [
  Object {
    "type": "DELETE_CUSTOMER_START",
  },
  Object {
    "customerId": 2,
    "resp": undefined,
    "type": "DELETE_CUSTOMER_SUCCESS",
  },
]
`;

exports[`customers actions fetch customer 1`] = `
Array [
  Object {
    "type": "FETCH_CUSTOMER_START",
  },
  Object {
    "resp": Object {
      "data": Object {
        "id": 2,
      },
    },
    "type": "FETCH_CUSTOMER_SUCCESS",
  },
]
`;

exports[`customers actions fetch customer history 1`] = `
Array [
  Object {
    "type": "FETCH_CUSTOMER_HISTORY_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "type": "FETCH_CUSTOMER_HISTORY_SUCCESS",
  },
]
`;

exports[`customers actions fetch customer history 2`] = `
Array [
  Object {
    "type": "FETCH_CUSTOMER_HISTORY_START",
  },
]
`;

exports[`customers actions merge customers 1`] = `
Array [
  Object {
    "type": "MERGE_CUSTOMERS_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "type": "MERGE_CUSTOMERS_SUCCESS",
  },
]
`;

exports[`customers actions update customer 1`] = `
Array [
  Object {
    "type": "SUBMIT_CUSTOMER_START",
  },
  Object {
    "isUpdate": true,
    "resp": Object {
      "data": Object {
        "email": "steve@acme.gorgias.io",
        "id": 2,
        "name": "Steve",
      },
    },
    "type": "SUBMIT_CUSTOMER_SUCCESS",
  },
]
`;
